# about-python

./: .gitignore  README.org  beispiel_py_modul.py  data_classes.py  dig_constructor.py  dig_pyqt6.py  dig_pyqt6.spec  dig_tkinter.py  pyqt6_text_editor.py  pytest.ini  youtube-download-mp3.old.sh  youtube-download-mp3.sh  youtube_download.py  youtube_download_mp3.py
Thomas_Theis/Python34/: anweisung_pass.py  ausgabe_formatieren.py  ausgabe_formatieren_c.py  ausgabe_tabelle.py  ausgabe_tabelle_c.py  bit_operator.py  browser.py  bytes.py  chr_ord.py  conditional_expression.py  datei_info.py  datei_liste.py  datei_verwalten.py  daten.csv  dictionary_eigenschaft.py  dictionary_funktion.py  dictionary_vergleich.py  dictionary_view.py  eingabe_hilfe.py  eingabe_text.py  eingabe_zahl.py  eval_exec.py  fehler_abfangen.py  fehler_basis.py  fehler_code.py  fehler_debuggen.py  fehler_eingabe_neu.py  fehler_erzeugen.py  fehler_unterscheiden.py  funktion_einfach.py  funktion_lambda.py  funktion_print.py  gui_aendern_absolut.py  (+176 more)
argparser.d/: do_it.py
asl_utils.d/: dig_slog.py
click.d/: click-it.py  click_example.py  click_example2.py  click_in_and_out.py  simply_click.py
configparser.d/: handle_ini.py  packages.in.ini  packages.out.ini
logging.d/: dig_asl_logging.py  dig_slog.py
pyproject.d/: pyproject.toml
pyqt6.d/: text_field.py
pyqt6_text_editor.d/: pyqt6_text_editor.py
subprocess/: dig_subprocess_pipe.py
subprocess.d/: dig_subprocess_pipe2.py  dig_subprocess_pipe3.py  pipe-to-Python.sh  pipe_from_Bash_shell.py  slow-output3.sh
zipping.d/: hello.pyz
(+16 files in other folders)
